--- a/src/templates/components/tool-bar.html
+++ b/src/templates/components/tool-bar.html
@@ -1,7 +1,7 @@
 <aside class="tool-bar js-toolBar">
   <div class="tools">
-    {% if 'clusters' in request.path %}
-    <a href="{% url 'document_editor_cluster' 'editor' pk %}" class="icon" aria-label="Ir para o Editor">
+    {% if 'analysis' in request.path %}
+    <a href="{% url 'document_editor_analyze' 'editor' pk %}" class="icon" aria-label="Ir para o Editor">
       {% include "svgs/edit-icon.html" %}
     </a>
     <a href="#" class="icon js-collapseExpand -collapse -collapsed" aria-label="Expandir">
