--- a/src/templates/components/dropdown-version-list.html
+++ b/src/templates/components/dropdown-version-list.html
@@ -1,4 +1,4 @@
-<a href="href="{% url 'document_editor_analyze' 'editor' object.id %}"">
+<a href="{% url 'document_editor_analyze' 'editor' object.id %}" class="title">
   <span>Minhas Versões</span>
   <div class="info">
     <div class="item -versions">{{ object.named_versions.count }}</div>
