Fix toolbar aria label

--- a/src/templates/pages/edit-document.html
+++ b/src/templates/pages/edit-document.html
@@ -60,7 +60,7 @@
             </div>
           </a>
           {% else %}
-          <a href="#" "title -opened js-openPublicParticipation">
+          <a href="#" class="title -opened js-openPublicParticipation">
             <span>Participação Pública</span>
             <div class="info">
               <div class="item">Solicitar</div>
