--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -70,6 +70,7 @@
 @import 'components/compare-checkbox';
 @import 'components/page-minimap';
 @import 'components/close-diff';
+@import 'components/text-diff';
 
 // Vendor
 @import 'vendor/tooltip';
