--- a/src/static/scss/components/_document-editor.scss
+++ b/src/static/scss/components/_document-editor.scss
@@ -14,6 +14,13 @@
   width: 100%;
   padding-left: 0;
 
+  flex-direction: column;
+  padding-right: 0;
+
+  & > .text-diff {
+    display: block;
+  }
+
   & > .side-bar {
     transform: translateX(-100%);
   }
