Add header infos

--- a/src/static/scss/components/_document-editor.scss
+++ b/src/static/scss/components/_document-editor.scss
@@ -63,18 +63,35 @@
     flex-direction: column;
   }
 
-  & > article > header > .date {
+  & > article > header > .info {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    margin-bottom: 1rem;
+  }
+
+
+  & > article > header .tags {
+    display: flex;
+  }
+
+  & > article > header .tags > * + * {
+    margin-left: 1rem;
+  }
+
+  & > article > header .date {
     font-size: $font-size-mili;
     font-weight: 500;
 
     color: $color-deep-gray;
   }
 
-  & > article > header > .date.-inactive {
+  & > article > header .date.-inactive {
     color: $color-red;
   }
 
-  & > article > header > .date.-active {
+  & > article > header .date.-active {
     color: $color-brand;
   }
 
