--- a/src/static/scss/components/_text-diff.scss
+++ b/src/static/scss/components/_text-diff.scss
@@ -60,10 +60,8 @@
       & > .title {
         display: flex;
         flex-direction: column;
-
-        &.-right {
-          text-align: right;
-        }
+        width: 50%;
+        text-align: center;
       }
 
       & > .title > * + * {
