--- a/src/templates/pages/invite-participants.html
+++ b/src/templates/pages/invite-participants.html
@@ -53,15 +53,21 @@
       </div>
       <div class="input-select -required">
         <div class="select">
+          {% if object %}
+          <select id="id_version_name" name="version" disabled>
+              <option value="{{object.version.pk}}">{{object.version.name|default_if_none:object.version.created|date:'H\hi - d \d\e b, Y'}}</option>
+          </select>
+          {% else %}
           <select id="id_version_name" required name="version" {% if not versions %}disabled{% endif %}>
             {% for version in versions %}
-              <option value="{{version.pk}}">{{version.name}}</option>
+              <option value="{{version.pk}}">{{version.name|default_if_none:version.created|date:'H\hi - d \d\e b, Y'}}</option>
             {% endfor %}
           </select>
+          {% endif %}
           <label for="id_version_name">Versão do Documento:</label>
           <div class="icon"><i class="arrow"></i></div>
         </div>
-        {% if not versions %}
+        {% if not versions and not object %}
           <ul class="errorlist">
             <li>Você precisa salvar uma versão do documento antes de abrir o projeto para um grupo de participação.</li>
           </ul>
