--- a/src/static/scss/components/_text-diff.scss
+++ b/src/static/scss/components/_text-diff.scss
@@ -1,60 +1,87 @@
 .text-diff {
-  display: none;
   position: relative;
+  z-index: 0;
+
+  display: none;
+  align-self: center;
   flex: 1;
+
   width: calc(66ch + 66ch + 4rem);
   max-width: 100%;
-  align-self: center;
-  z-index: 0;
-  border-left: 4vw solid transparent;
-  border-right: 4vw solid transparent;
   margin-top: 2rem;
+
+  border-right: 4vw solid transparent;
+  border-left: 4vw solid transparent;
+
+  #mergely {
+    display: flex;
+
+    width: unset !important;
+  }
 
   #mergely-splash {
     display: none !important;
   }
 
-  #mergely-lhs-mergely-rhs-canvas {
-      // margin-top: 9px;
-  }
-
   #mergely-editor-lhs .CodeMirror-vscrollbar {
-    display: none !important;
+    // display: none !important;
+
+    overflow-y: scroll !important;
+    overflow-y: overlay !important;
   }
 
   #mergely-editor-lhs .CodeMirror-sizer {
     padding-right: 0 !important;
   }
 
+  .CodeMirror-sizer {
+    flex: 1;
+
+    border-right: none;
+    border-right-width: 0 !important;
+  }
+
+  .CodeMirror-scroll {
+    flex: 1;
+
+    margin: 0;
+  }
+
   .CodeMirror {
     font-family: inherit;
   }
 
+  .CodeMirror.CodeMirror-wrap {
+    display: flex;
+  }
+
   .mergely-column {
-      box-sizing: border-box;
-      border: none;
+    flex: 1;
+
+    box-sizing: border-box;
+    width: unset !important;
+
+    border: none;
   }
 
   .text-diff {
-      width: calc(66ch + 66ch + 4rem);
-      align-self: center;
-      z-index: 0;
-  }
+    z-index: 0;
 
-  .CodeMirror-scroll {
-      // padding-top: 4rem;
+    align-self: center;
+
+    width: calc(66ch + 66ch + 4rem);
   }
 
   .mergely-full-screen-8 {
     top: 0;
+    right: 0;
     bottom: 0;
     left: 0;
-    right: 0;
 
     & > .titles {
       display: flex;
       justify-content: space-between;
-      padding-right: 15px;
+
       margin-bottom: 2rem;
 
       & > .title {
@@ -73,55 +100,57 @@
       }
 
       & > .title > .date {
-        color: $color-gray;
         font-size: $font-size-mili;
+
+        color: $color-gray;
       }
     }
-
   }
 
   .CodeMirror-hscrollbar {
-      display: block !important;
+    display: block !important;
   }
 
   .CodeMirror-linebackground.lhs {
-      border-left: 1px solid;
-      border-bottom-left-radius: 5px;
-      border-top-left-radius: 5px;
-      box-sizing: content-box;
+    box-sizing: content-box;
+
+    border-left: 1px solid;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
   }
 
 
   .CodeMirror-linebackground.lhs:not(.current) {
-      color: #a2a2a2;
+    color: #A2A2A2;
   }
 
-  .CodeMirror-linebackground, .CodeMirror-linebackground.current {
-      border: none !important;
+  .CodeMirror-linebackground,
+  .CodeMirror-linebackground.current {
+    border: none !important;
   }
 
   .CodeMirror-linebackground.rhs {
-      background-color: rgba(187, 230, 210, 0.5) !important;
+    background-color: rgba(187, 230, 210, .5) !important;
   }
 
   .CodeMirror-linebackground.lhs {
-      background-color: rgba(251, 225, 226, 0.5) !important;
+    background-color: rgba(251, 225, 226, .5) !important;
   }
 
-  .CodeMirror-linebackground{
-      padding: 0.5rem 1rem;
+  .CodeMirror-linebackground {
+    padding: .5rem 1rem;
   }
 
   .mergely.ch.a.rhs {
-      background-color: rgba(45, 169, 101, 0.5);
+    background-color: rgba(45, 169, 101, .5);
   }
 
   .mergely.a.rhs {
-      background-color: rgba(45, 169, 101, 0.5);
+    background-color: rgba(45, 169, 101, .5);
   }
 
   .mergely.ch.d.lhs {
-      color: #EB6767 !important;
-      background-color: rgba(235, 103, 103, 0.4);
+    color: #EB6767 !important;
+    background-color: rgba(235, 103, 103, .4);
   }
 }
