--- a/src/templates/pages/edit-document.html
+++ b/src/templates/pages/edit-document.html
@@ -110,7 +110,7 @@
 {% block content %}
 
 <main class="document-editor -active js-documentEditor" data-document-id="{{ object.id }}">
-  <div class="close-diff js-closeDiff">Cancelar comparação</div>
+  <div class="close-diff js-closeDiff">Voltar</div>
 
   {% if page == 'editor' %}
     {% include "components/timeline-sidebar.html" %}
