--- a/src/templates/components/dropdown-version-list.html
+++ b/src/templates/components/dropdown-version-list.html
@@ -1,13 +1,15 @@
-<a href="href="{% url 'document_editor_analyze' 'editor' object.id %}"">
+<a href="{% url 'document_editor_analyze' 'editor' object.id %}" class="title">
   <span>Minhas Versões</span>
   <div class="info">
     <div class="item -versions">{{ object.named_versions.count }}</div>
   </div>
 </a>
-<ul class="itens">
-  {% for version in named_versions %}
-    <a href="{% url 'document_editor_analyze' template='editor' pk=object.pk %}?version={{version.number}}">{{version.name}}</a>
-    {% empty %}
-    <a href="#" class="-empty">Sem versões</a>
-  {% endfor %}
-</ul>
+{% for version in named_versions %}
+  <hr>
+  <a href="{% url 'document_editor_analyze' template='editor' pk=object.pk %}?version={{version.number}}">
+    <span>{{version.name}}</span>
+  </a>
+{% empty %}
+  <hr>
+  <a href="#" class="-empty">Sem versões</a>
+{% endfor %}
