--- a/src/templates/pages/edit-document.html
+++ b/src/templates/pages/edit-document.html
@@ -8,91 +8,108 @@
 
 {% block navbar_document %}
   <div class="project">
-    <span class="title js-documentTitle">{{object.title}}</span>
+    <span class="title js-documentTitle">
+      {{object.title}} <a href="{% url 'edit_document' object.id object.slug %}">Editar documento</a>
+    </span>
+    <div class="menu">
       <div class="dropdown-menu">
-      {% if group %}
-        {% if group.public_participation %}
-        <span>Participação pública</span>
+        {% if group %}
+          {% if group.version.name %}
+            <span class="version">Versão:</span>
+            <span>{{group.version.name}}</span>
+          {% else %}
+            <span class="version">Versão:</span>
+            <span>{{group.version.created|date:'H\hi - d \d\e b, Y'}}</span>
+          {% endif %}
         {% else %}
-        <span class="-closed">{{group.thematic_group.name}}</span>
+          {% if selected_version.name %}
+            <span class="version">Versão:</span>
+            <span class="js-versionName">{{selected_version.name}}</span>
+          {% else %}
+            <span class="version">Versão:</span>
+            <span class="js-versionName">{{selected_version.created|date:'H\hi - d \d\e b, Y'}}</span>
+          {% endif %}
         {% endif %}
-      {% else %}
-        {% if selected_version.name %}
-          <span class="js-versionName">{{selected_version.name}}</span>
-        {% else %}
-          <span class="js-versionName">{{selected_version.created|date:'H\hi - d \d\e b, Y'}}</span>
-        {% endif %}
-      {% endif %}
-      <ul class="list js-menuList">
-        <div class="dropdown js-versionsList">
+        <ul class="list js-menuList">
           {% include "components/dropdown-version-list.html" %}
-        </div>
-        <hr>
-        {% for public_participation in public_group %}
-        {% if public_participation.group_status == 'waiting' %}
-        <a href="#" class="js-waitingButton">
-          <span>Participação Pública</span>
-          <div class="info">
-              <div class="item -blue">Aguardando</div>
-          </div>
-        </a>
+        </ul>
+      </div>
+      <div class="dropdown-menu">
+        {% if group %}
+          {% if group.public_participation %}
+          <span class="-opened">Participação Pública</span>
+          {% else %}
+          <span class="-closed">{{ group.thematic_group.name }}</span>
+          {% endif %}
         {% else %}
-        <a href="{% url 'document_editor_analyze' 'analysis' object.id %}?group_id={{public_participation.id}}">
-          <span>Participação Pública</span>
-          <div class="info -full">
-            <div class="item -participants">{{ public_participation|group_participants }}</div>
-            <div class="item -opinions">{{ public_participation.suggestions.count }}</div>
-            <div class="item -green">Em andamento</div>
-          </div>
-        </a>
+          <span>Participação</span>
         {% endif %}
-        {% empty %}
-        {% if not object.title or not object.description or not object.themes.all %}
-        <a href="#" class="js-openValidationButton">
-          <span>Participação Pública</span>
-          <div class="info">
-            <div class="item">Solicitar</div>
-          </div>
-        </a>
-        {% else %}
-        <a href="#" class="js-openPublicParticipation">
-          <span>Participação Pública</span>
-          <div class="info">
-            <div class="item">Solicitar</div>
-          </div>
-        </a>
-        {% endif %}
-        {% endfor %}
-        <hr>
-        <div class="private">
-          <div class="title">
-            <span class="-closed">Participações Privadas</span>
-            {% if not object.title or not object.description or not object.themes.all %}
-            <a href="#" class="-add js-openValidationButton">Adicionar</a>
-            {% else %}
-            <a href="{% url 'new_group' object.id %}" class="-add">Adicionar</a>
-            {% endif %}
-          </div>
-          <!-- Criar nova -->
-          {% for invited_group in private_groups %}
-            <a href="{% url 'document_editor_analyze' 'analysis' object.id %}?group_id={{invited_group.id}}">
-              <span>{{invited_group.thematic_group.name}}</span>
-              <div class="info">
-                <div class="item -participants">{{invited_group.thematic_group.participants.count}}</div>
-                <div class="item -opinions">{{invited_group.suggestions.count}}</div>
+        <ul class="list js-menuList">
+          {% for public_participation in public_group %}
+          {% if public_participation.group_status == 'waiting' %}
+          <a href="#" class="title -opened js-waitingButton">
+            <span>Participação Pública</span>
+            <div class="info">
+                <div class="item -blue">Aguardando</div>
+            </div>
+          </a>
+          {% else %}
+          <a href="{% url 'document_editor_analyze' 'analysis' object.id %}?group_id={{public_participation.id}}" class="title -opened">
+            <span>Participação Pública</span>
+            <div class="info -full">
+              <div class="item -participants">
+                {{ public_participation|group_participants }}
               </div>
-            </a>
+              <div class="item -opinions">
+                {{ public_participation.suggestions.count }}
+              </div>
+              <div class="item -green">Em andamento</div>
+            </div>
+          </a>
+          {% endif %}
+          {% empty %}
+          {% if not object.title or not object.description or not object.themes.all %}
+          <a href="#" class="title -opened js-openValidationButton">
+            <span>Participação Pública</span>
+            <div class="info">
+              <div class="item">Solicitar</div>
+            </div>
+          </a>
+          {% else %}
+          <a href="#" class="title -opened js-openPublicParticipation">
+            <span>Participação Pública</span>
+            <div class="info">
+              <div class="item">Solicitar</div>
+            </div>
+          </a>
+          {% endif %}
           {% endfor %}
-        </div>
-      </ul>
+          <hr>
+          <div class="private">
+            <div class="title -closed">
+              <span>Participações Privadas</span>
+              {% if not object.title or not object.description or not object.themes.all %}
+              <a href="#" class="-add js-openValidationButton">Adicionar</a>
+              {% else %}
+              <a href="{% url 'new_group' object.id %}" class="-add">Adicionar</a>
+              {% endif %}
+            </div>
+            <!-- Criar nova -->
+            {% for invited_group in private_groups %}
+              <a href="{% url 'document_editor_analyze' 'analysis' object.id %}?group_id={{invited_group.id}}">
+                <span>{{invited_group.thematic_group.name}}</span>
+                <div class="info">
+                  <div class="item -participants">{{invited_group.thematic_group.participants.count}}</div>
+                  <div class="item -opinions">{{invited_group.suggestions.count}}</div>
+                </div>
+              </a>
+            {% endfor %}
+          </div>
+        </ul>
+      </div>
     </div>
   </div>
 {% endblock navbar_document %}
-{% block navbar_tools %}
-<a href="{% url 'edit_document' object.id object.slug %}" class="icon -settings" aria-label="Configurar">
-  {% include "svgs/settings-icon.html" %}
-</a>
-{% endblock %}
 
 {% block extracss %}
 <style>
